Bug 36606 - Weborder: Pay by CC > Year in Exp. Date is cut off

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -67,7 +67,7 @@ select {
     appearance: none;
     width: 100%;
     height: 100%;
-    padding: 0 25px 0 10px;
+    padding: 0 0 0 0.5em;
     float: left;
 }
 select:focus {
